# course_2_term_1_lab_10

./: CMakeLists.txt  finder.cpp  finder.h  main.cpp
_tests/: CMakeLists.txt  Finder.test.cpp
